# rain-garden-advisor

./: .env.example  .gitattributes  .gitignore  CLAUDE.md  README.md  TODO.md  agent.py  app.py  pyproject.toml  tools.py
data/: NWPL_RegionStateMapping.csv  RainGarden-SizeFactors.csv  nyc_rain_garden_native_plants.csv  usda-plants 8-1-2023.csv
data/corpus/: epa_soak_up_the_rain.txt  manifest.json  missouri_botanical.txt
docs/: API_SAMPLES_FOR_DESIGN.md  CLAUDE_DESIGN_BRIEF.md  DESIGN_SPEC.md  FRONTEND_INTEGRATION.md  Rain Garden Advisor WF.fig
examples/: compare_notebook.py
notebooks/: DIY Rain Garden Calculator_20260624.yaml
scripts/: build_rag_index.py  dump_complete_response.py  dump_live_response.py
src/rain_garden/: __init__.py  geocode.py  hardiness.py  plants.py  precipitation.py  prompts.py  retrieval.py  roofarea.py  sizing.py
src/rain_garden/data/: guidance_chunks.jsonl  guidance_embeddings.npy  nwpl_usda_merged.csv
tests/: test_factor_derivation.py  test_geocode.py  test_guidance_eval.py  test_hardiness.py  test_plants.py  test_precipitation.py  test_progress.py  test_retrieval.py  test_roof_estimate.py  test_roofarea.py  test_search_guidance.py  test_sizing.py  test_tools.py  test_viability.py  test_viability_wiring.py
tests/fixtures/: hardiness_00000.json  hardiness_11209.json  hardiness_58102.json  nominatim_brooklyn.json  nominatim_eiffel.json  open_meteo_brooklyn.json  solar_brooklyn.json  solar_no_building.json
