[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "rain-garden"
version = "0.1.0"
description = "DIY rain garden calculator (ported from Hex notebook)"
requires-python = ">=3.10"
dependencies = [
    "python-dotenv",
    "requests",
    "numpy",
    "geopy",
    "pandas",
    "anthropic",
]

[project.optional-dependencies]
dev = [
    "pytest",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
rain_garden = ["data/*.csv"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
